# YaBackUp_v2

./: .gitignore  README.md  config_RENAME.ini  pyproject.toml  req.txt  run.py
modules/: backup.py  log.py  upload_ya.py  yadisk.py
modules/config/: config_RENAME.ini
modules/logs/: program_logs.txt
