[tool.poetry]
name = "yabackup-v2"
version = "0.1.0"
description = ""
authors = ["stirelshka8 <stirelshka8@gmail.com>"]
readme = "README.md"
packages = [{include = "yabackup_v2"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
